# ink2anki

./: README.md  pyproject.toml
contrib/: styles.css  test.md
src/anki/: __init__.py  cards.py  const.py  md.py  models.py  search.py
