[project]
name = "anki"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jacob Burch-Hill", email = "jacob@burch-hill.com" }
]
dependencies = [
    "httpx>=0.26.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "anki:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anki"]
