[project]
name = "anki"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jacob Burch-Hill", email = "jacob@burch-hill.com" }
]
dependencies = [
    "httpx>=0.26.0",
    "markdown>=3.5.2",
    "attrs>=23.2.0",
    "pygments>=2.17.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
ink2anki = "anki:ink2anki"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anki"]

[tool.ruff]
exclude = [
    ".git",
    "migrations",
]
select = [
  "B", # flake8-bugbear
  "E", # Pycodestyle
  "F", # Pyflakes
  "I", # isort
  "UP", # pyupgrade
]
line-length = 88
indent-width =  4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
# magic-trailing-comma = "respect"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.isort]
force-single-line = false

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pyright]
venvPath = "."
venv = ".venv"
